Added creative tabs for each of the different races